--- a/src/translations/languages/de.json
+++ b/src/translations/languages/de.json
@@ -199,7 +199,7 @@
         "availableBalance": "Available balance",
         "pending": "Pending"
       },
-      "walletTans": {
+      "walletTxns": {
         "time": "Time",
         "amount": "Amount",
         "hash": "Hash"
