--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -205,5 +205,9 @@
         "hash": "Hash"
       }
     }
+  },
+  "alerts": {
+    "configurationFailure": "Configuration Failure",
+    "errorOccurred": "Error occurred"
   }
 }
