Basic wallet:  backup and import wallet with notification (#10)
* Implemented HTML5  notifications api

* Implemented I18 in notifications

* code refactoring as per git comments

* electron build with asar true

* changes isNodeRunning to isRunning

* build react befor electron build

* Implemented HTML5  notifications api

* Implemented I18 in notifications

* Implemented Menu for Backup Wallet

* Fixed issue in rpcConfig delcaration

* restructure redux for rpc request

* Implemented Menu for Backup Wallet

* Wallet menu added

* change in self config flow: added rpcuser and rpcpassword

* backup wallet to specific directory

* Import wallet

* removed unused variables

* changed notification to default export and changed attribute name to camel case

* added notification for backup and import wallet

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -205,5 +205,12 @@
         "hash": "Hash"
       }
     }
+  },
+  "alerts": {
+    "configurationFailure": "Configuration Failure",
+    "errorOccurred": "Error occurred",
+    "success": "Success",
+    "backupSuccess": "Wallet backup done successfully",
+    "importSuccess": "Import wallet done successfully"
   }
 }
