Sumit/code refactoring (#17)
* App folder restructured

* Wallet container restructured

* Settings container restructured

* MasterNode container restructured

* Errors ExchangePage and HelpPage container restructured

* File renaming

* Added const files for routes

* Added loglevel for logs

* BlockchainPage refactoring

* worked on SearchBar, Spinner, StatCard restructuring

* css issue fixed

* Launch screen implementation (#12)

* Readded semi in electron app

* Basic wallet ui/blockchain rpc status check (#14)

* Added blockchain rpc status check

* Added constant for blockchain status retry variable

* Updated constants for blockhain status retry and setTimeout

* Updated rpc methods

Co-authored-by: Sumit Rajput <ssumitrajput854@gmail.com>

* Basic wallet ui/block sync progress (#13)

* Block sync progress with popover

* Changed saga initial call for sync status

* Block sync progress with popover

* Changed saga initial call for sync status

* Sync status reskin

* Added blockchain rpc status check (#16)

Co-authored-by: Sumit Rajput <ssumitrajput854@gmail.com>

* Sync component css refactoring

* Reversed block status condition

Co-authored-by: Sumit Rajput <ssumitrajput854@gmail.com>

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -8,10 +8,11 @@
     "statCard": {},
     "syncStatus": {
       "synchronized": "Synchronized",
-      "syncing": "Syncing",
+      "syncing": "Synchronizing",
       "synced": "Synced",
-      "justNow": "just now",
-      "aMinuteAgo": "a minute ago"
+      "justNow": "Synchronized just now",
+      "aMinuteAgo": "Synchronized a minute ago",
+      "blockInfo": "Block %{latestSyncedBlock} of %{latestBlock}"
     }
   },
   "containers": {
