Epic/wallet send receive (#21)
* Resolved merge conflict

* Added send to wallet functionality

* Receive transaction

* Receive transaction

* Common call for set and get Persistent Storage

* Manage receive trans in PersistentStore

* Added get wallet txs functionality

* Pagination component implementation

* Resolved merge conflict

* Added unit in table and date format change

* Added generic functionality to pagination component

* Integrated pending balance functionality

* Added common pagination component

* Restyle wallet txns component

* UI changes for send and receive pagination

Co-authored-by: Sumit Rajput <ssumitrajput854@gmail.com>

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -41,7 +41,7 @@
       },
       "blockPage": {
         "block": "Block",
-        "title": "Block %{blockNo} – DeFi Blockchain Client",
+        "title": "– DeFi Blockchain Client",
         "blockchain": "Blockchain",
         "transactions": "Transactions",
         "noOfTransactions": "Number of transactions",
@@ -167,7 +167,9 @@
         "amount": "Amount",
         "dFI": "DFI",
         "message": "Message",
+        "label": "Label",
         "amountToReceive": "Amount to Receive",
+        "addressNotAvailable": "Address not available",
         "cancel": "Cancel",
         "continue": "Continue"
       },
@@ -196,6 +198,8 @@
         "send": "Send",
         "receive": "Receive",
         "paymentRequests": "Payment requests",
+        "noPaymentRequests": "No payment requests available",
+        "paginationRange": "%{from} – %{to} of %{total} payment request",
         "transactions": "Transactions",
         "availableBalance": "Available balance",
         "pending": "Pending"
@@ -203,7 +207,9 @@
       "walletTxns": {
         "time": "Time",
         "amount": "Amount",
-        "hash": "Hash"
+        "hash": "Hash",
+        "paginationRange": "%{from} – %{to} of %{total} transaction",
+        "noTransactions": "No transactions available"
       }
     }
   },
