Basic wallet ui/defi currency conversion (#25)
* Setting page restructuring

* Unit conversion for receive defi, list receive defi, sidebar and main wallet page and  setting page refactoring

* Setting page restructuring

* Unit conversion for receive defi, list receive defi, sidebar and main wallet page and  setting page refactoring

* Send page, BlockchainPage and settingsPage unit conversion

* Small fixes in unit conversion

* Added common function to get unit in setting

* Restrict user to add invalid amount in receive functionality

* Added dust value check for amount field

* Restrict user to add invalid amount in send functionality

* Added notification for errors

Co-authored-by: Sumit Rajput <ssumitrajput854@gmail.com>

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -132,6 +132,8 @@
       "german": "German",
       "displayAmount": "Display amounts in unit",
       "dFI": "DFI",
+      "fi": "fi",
+      "conversionLabel": "1 %{from} = %{conversion} %{to}",
       "µDFI": "µDFI",
       "displayMode": "Display mode",
       "sameAsSystem": "Same as system",
@@ -215,6 +217,13 @@
   },
   "alerts": {
     "configurationFailure": "Configuration Failure",
+    "walletBalanceFailure": "Wallet Balance Failure",
+    "pendingBalanceFailure": "Pending Balance Failure",
+    "addReceiveTxnsFailure": "Add Receive Txns Failure",
+    "removeReceiveTxnsFailure": "Remove Receive Txns Failure",
+    "paymentRequestsFailure": "Payment Requests Failure",
+    "walletTxnsFailure": "Wallet Txns failure",
+    "sendDataFailure": "Send Data Failure",
     "errorOccurred": "Error occurred",
     "success": "Success",
     "backupSuccess": "Wallet backup done successfully",
