--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -132,6 +132,8 @@
       "german": "German",
       "displayAmount": "Display amounts in unit",
       "dFI": "DFI",
+      "fi": "fi",
+      "conversionLabel": "1 %{from} = %{conversion} %{to}",
       "µDFI": "µDFI",
       "displayMode": "Display mode",
       "sameAsSystem": "Same as system",
@@ -215,6 +217,13 @@
   },
   "alerts": {
     "configurationFailure": "Configuration Failure",
+    "walletBalanceFailure": "Wallet Balance Failure",
+    "pendingBalanceFailure": "Pending Balance Failure",
+    "addReceiveTxnsFailure": "Add Receive Txns Failure",
+    "removeReceiveTxnsFailure": "Remove Receive Txns Failure",
+    "paymentRequestsFailure": "Payment Requests Failure",
+    "walletTxnsFailure": "Wallet Txns failure",
+    "sendDataFailure": "Send Data Failure",
     "errorOccurred": "Error occurred",
     "success": "Success",
     "backupSuccess": "Wallet backup done successfully",
