Epic/blockchain page (#27)
* Added blockPage functionality

* Added block txn functionality

* Refactored block txn UI compoent

* Added amount conversion logic for block txns

* Updated dust amount check logic

* Refactored code and removed unused variables

* Refactored mapDispatchToProps method

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -37,7 +37,9 @@
         "transactions": "Transactions",
         "minedBy": "Mined by",
         "size": "Size",
-        "count": "612127 – 612138 of 999,999,999 blocks"
+        "paginationRange": "%{from} – %{to} of %{total} blocks",
+        "noBlocks": "No blocks available",
+        "loading": "Loading..."
       },
       "blockPage": {
         "block": "Block",
@@ -59,7 +61,10 @@
         "noInputs": "No Inputs (Newly Generated Coins)",
         "copied": "Copied!",
         "dFI": "DFI",
-        "unparsedAddress": "Unparsed address"
+        "unparsedAddress": "Unparsed address",
+        "paginationRange": "%{from} – %{to} of %{total} transactions",
+        "noTransactions": "No transactions available",
+        "loading": "Loading..."
       },
       "minerPage": {
         "miner": "Miner",
