Epic/console rpc calls (#31)
* Add jest setup

* Add routeting test

* Add utility test case

* WIP

* Add utility test cases

* WIP

* Fix errors, refactor code and setup localStorage for test env

* Added unit test cases for saga in wallet component

* Fix localstorage bug and add store dispacther for initial rpcAuth

* updated test suites of services and utility

* Add separate file for tesdata, cleanup of service.test.tsx

* Move mock axios to separate file, cleanup in services.test and localstorage

* Add snapshot of wallet page

* hide console log in jest and cleanup

* Added unit test cases for reducers in wallet component

* Add snapshots of walletpage component

* WIP console feature

* Cleanup in saga.test and reducer.test

* Added parser for cli query

* Add console ui with example component

* Refactor code and add validation

* Added saga, reducer and service for console container

* Wip integration of console page with saga

* Add separate route for result of Cli

* Integrated saga with console page

* Updated code to throw error from backend for invalid input

* Add reset function

* connect result page with console page

* Fix indent and warnings

* remove jest config from jest.config.js and put in neutrinorc

* Add separate testdata json for utility

* refactor test case and cleanup

* cleanup mocks and spy function

* WIP console feature

* Added parser for cli query

* Add console ui with example component

* Refactor code and add validation

* Added saga, reducer and service for console container

* Wip integration of console page with saga

* Add separate route for result of Cli

* Integrated saga with console page

* Updated code to throw error from backend for invalid input

* Add reset function

* connect result page with console page

* Fix indent and warnings

* Add console feature testcase

* fix getDataForCLIQuery

* back button on top

* Add n

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -24,7 +24,8 @@
       "blockchain": "Blockchain",
       "exchange": "Exchange",
       "help": "Help",
-      "settings": "Settings"
+      "settings": "Settings",
+      "console": "Console"
     },
     "blockChainPage": {
       "blockChainPage": {
@@ -217,6 +218,31 @@
         "hash": "Hash",
         "paginationRange": "%{from} – %{to} of %{total} transaction",
         "noTransactions": "No transactions available"
+      }
+    },
+    "console": {
+      "consolePage": {
+        "consoleDefiClient": "Console – DeFi Blockchain Client",
+        "defiCliCommand": "Enter Defi-cli command",
+        "console": "Console",
+        "submit": "Submit",
+        "forRef": "For Reference",
+        "example": [
+          {
+            "title": "sendtoaddress",
+            "highlightText": "sendtoaddress \"address\" amount ( \"comment\" \"comment_to\" subtractfeefromamount replaceable conf_target \"estimate_mode\" )",
+            "cmdText": "defi-cli sendtoaddress \"1M72Sfpbz1BPpXFHz9m3CdqATR44Jvaydd\" 0.1 \"donation\" \"seans outpost\""
+          },
+          {
+            "title": "getblock",
+            "highlightText": "getblock \"blockhash\" ( verbosity )",
+            "cmdText": "defi-cli getblock \"00000000c937983704a73af28acdec37b049d214adbda81d7e2a3dd146f6ed09\""
+          }
+        ]
+      },
+      "consoleResultPage": {
+        "resultPage": "CLI Result",
+        "back": "Back"
       }
     }
   },
