Integrated consolidator module

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -130,6 +130,10 @@
       "blockPruneStorage": "Block storage to prune",
       "gb": "GB",
       "databaseSize": "Size of database cache",
+      "utxoConsolidator": "UTXO Consolidator",
+      "maximumAmount": "Maximum value of each UTXO",
+      "maximumCount": "Maximum number of UTXOs",
+      "feeRate": "Specific fee rate in BTC/kB",
       "mib": "MiB",
       "scriptVerification": "Script verification",
       "noOfThreads": "Number of threads",
