Updated BTC with DFI for fee label inside setting

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -165,7 +165,7 @@
       "databaseSize": "Size of database cache",
       "maximumAmount": "Maximum value of each UTXO",
       "maximumCount": "Maximum number of UTXOs",
-      "feeRate": "Specific fee rate in BTC/kB",
+      "feeRate": "Specific fee rate in DFI/kB",
       "mib": "MiB",
       "scriptVerification": "Script verification",
       "noOfThreads": "Number of threads",
