--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -165,7 +165,7 @@
       "utxoConsolidator": "UTXO Konsolidierer",
       "maximumAmount": "Maximaler Wert von jedem UTXO",
       "maximumCount": "Maximale Anzahl von UTXOs",
-      "feeRate": "Gebührensatz in BTC/kB",
+      "feeRate": "Gebührensatz in DFI/kB",
       "mib": "MiB",
       "scriptVerification": "Skript verification",
       "noOfThreads": "Anzahl der threads",
