--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -188,13 +188,13 @@
     "wallet": {
       "sendPage": {
         "sendDFITitle": "Senden DFI – DeFi Blockchain-Client",
-        "wallet": "Wallet",
+        "wallet": "Brieftasche",
         "sendDFI": "Senden DFI",
         "amount": "Höhe",
         "dFI": "DFI",
         "max": "MAX",
         "toAddress": "Adresse",
-        "walletBalance": "Wallet-Guthaben",
+        "walletBalance": "Brieftasche-Guthaben",
         "amountToSend": "Betrag senden",
         "cancel": "Abbrechen",
         "continue": "Weiter",
@@ -208,7 +208,7 @@
       },
       "receivePage": {
         "receiveDFITitle": "Erhalten DFI – DeFi Blockchain-Client",
-        "wallet": "Wallet",
+        "wallet": "Brieftasche",
         "receiveDFI": "Erhalten DFI",
         "amount": "Höhe",
         "dFI": "DFI",
@@ -228,7 +228,7 @@
       "paymentRequestPage": {
         "paymentRequestTitle": "Zahlungsaufforderung %{id} – DeFi Blockchain-Client",
         "paymentRequest": "Zahlungsaufforderung",
-        "wallet": "Wallet",
+        "wallet": "Brieftasche",
         "delete": "Löschen",
         "label": "Label",
         "amount": "Höhe",
@@ -238,8 +238,8 @@
         "uRI": "URI"
       },
       "walletPage": {
-        "walletDefiClient": "Wallet – DeFi Blockchain-Client",
-        "wallet": "Wallet",
+        "walletDefiClient": "Brieftasche – DeFi Blockchain-Client",
+        "wallet": "Brieftasche",
         "delete": "Löschen",
         "send": "Senden",
         "receive": "Erhalten",
@@ -286,12 +286,12 @@
   },
   "alerts": {
     "configurationFailure": "Konfigurationsfehler",
-    "walletBalanceFailure": "Wallet Balance Fehler",
+    "walletBalanceFailure": "Brieftasche Balance Fehler",
     "pendingBalanceFailure": "Pending Balance Fehler",
     "addReceiveTxnsFailure": "Fügen Sie Erhalten Txns Fehler",
     "removeReceiveTxnsFailure": "Entfernen Sie Den Empfangs-Txns Fehler",
     "paymentRequestsFailure": "Zahlung-Anfragen Scheitern",
-    "walletTxnsFailure": "Wallet Txns Fehler",
+    "walletTxnsFailure": "Brieftasche Txns Fehler",
     "sendDataFailure": "Senden Von Daten Fehler",
     "errorOccurred": "Fehler aufgetreten",
     "success": "Erfolg",
