--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -210,6 +210,7 @@
         "receiveDFITitle": "Erhalten DFI – DeFi Blockchain-Client",
         "wallet": "Brieftasche",
         "receiveDFI": "Erhalten DFI",
+        "optional": "Freiwillig",
         "amount": "Höhe",
         "dFI": "DFI",
         "message": "Nachricht",
