--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -210,6 +210,7 @@
         "receiveDFITitle": "Receive DFI – DeFi Blockchain Client",
         "wallet": "Wallet",
         "receiveDFI": "Receive DFI",
+        "optional": "Optional",
         "amount": "Amount",
         "dFI": "DFI",
         "message": "Message",
