Add optional tag on amount, label and message in receive page

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -211,6 +211,7 @@
         "receiveDFITitle": "Erhalten DFI – DeFi Blockchain-Client",
         "wallet": "Brieftasche",
         "receiveDFI": "Erhalten DFI",
+        "optional": "Freiwillig",
         "amount": "Höhe",
         "dFI": "DFI",
         "message": "Nachricht",
