Added Link to Block in transaction List

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -252,6 +252,7 @@
         "pending": "Ausstehend"
       },
       "walletTxns": {
+        "block": "Block",
         "time": "Zeit",
         "amount": "Höhe",
         "hash": "Hash",
