--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -252,6 +252,7 @@
         "pending": "Pending"
       },
       "walletTxns": {
+        "block": "Block",
         "time": "Time",
         "amount": "Amount",
         "hash": "Hash",
