Updated 'Block' to 'Height' as label for transaction list

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -253,7 +253,7 @@
         "pending": "Ausstehend"
       },
       "walletTxns": {
-        "block": "Block",
+        "height": "Höhe",
         "time": "Zeit",
         "amount": "Höhe",
         "hash": "Hash",
