Add a feature to restart a node with new masternode config when someone creates a new masternode

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -299,6 +299,7 @@
     "errorOccurred": "Fehler aufgetreten",
     "success": "Erfolg",
     "backupSuccess": "Brieftasche backup erfolgreich abgeschlossen",
-    "importSuccess": "Import-wallet erfolgreich abgeschlossen"
+    "importSuccess": "Import-wallet erfolgreich abgeschlossen",
+    "masterNodeOperatorAddressFailure": "Masternode operator address is not present"
   }
 }
