Add feature to restart node with kill queue

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -122,12 +122,14 @@
         "masterNodeName": "Master-Knoten-Name",
         "lackOfBalanceMsg": "Keine Master-Knoten aufgrund fehlender Mittel. Mindestens 1 million DFI ist erforderlich zum erstellen der master-Knoten",
         "confirmationText": "Sind Sie sicher, dass Sie möchten, erstellen Sie ein master-Knoten?",
+        "restartNodeConfirmationText": "Are you sure you want to restart a node?",
         "createNodeButton": "Erstellen Sie Master-Knoten",
         "noButtonText": "Abbrechen",
         "yesButtonText": "Weiter",
         "masternodeOperator": "Master-Knoten Betreiber",
         "masternodeOwner": "Master-Knoten Besitzer",
-        "backToMasternodePage": "Zurück zu Master-Knoten Seite"
+        "backToMasternodePage": "Zurück zu Master-Knoten Seite",
+        "restartNodeButton": "Restart node"
       },
       "masternodeDetailPage": {
         "masternodeDetailTitle": "Master-Knoten-Detail-Seite %{hash}",
@@ -300,6 +302,8 @@
     "success": "Erfolg",
     "backupSuccess": "Brieftasche backup erfolgreich abgeschlossen",
     "importSuccess": "Import-wallet erfolgreich abgeschlossen",
-    "masterNodeOperatorAddressFailure": "Masternode operator address is not present"
+    "masterNodeOperatorAddressFailure": "Masternode operator address is not present",
+    "restartNode": "Restarting Node",
+    "nodeDisconnected": "Node is disconnected"
   }
 }
