--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -122,12 +122,14 @@
         "masterNodeName": "MasterNode Name",
         "lackOfBalanceMsg": "Unable to create masternode due to lack of funds. Minimum 1 million DFI is required to create master node",
         "confirmationText": "Are you sure you want to create a master node?",
+        "restartNodeConfirmationText": "Are you sure you want to restart a node?",
         "createNodeButton": "Create Master Node",
         "noButtonText": "Cancel",
         "yesButtonText": "Continue",
         "masternodeOperator": "Masternode Operator",
         "masternodeOwner": "Masternode Owner",
-        "backToMasternodePage": "Back to Masternode Page"
+        "backToMasternodePage": "Back to Masternode Page",
+        "restartNodeButton": "Restart node"
       },
       "masternodeDetailPage": {
         "masternodeDetailTitle": "Masternode Detail Page %{hash}",
@@ -300,6 +302,8 @@
     "success": "Success",
     "backupSuccess": "Wallet backup done successfully",
     "importSuccess": "Import wallet done successfully",
-    "masterNodeOperatorAddressFailure": "Masternode operator address is not present"
+    "masterNodeOperatorAddressFailure": "Masternode operator address is not present",
+    "restartNode": "Restarting Node",
+    "nodeDisconnected": "Node is disconnected"
   }
 }
