--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -305,6 +305,7 @@
     "importSuccess": "Import-wallet erfolgreich abgeschlossen",
     "masterNodeOperatorAddressFailure": "Masternode operator address is not present",
     "restartNode": "Restarting Node",
-    "nodeDisconnected": "Node is disconnected"
+    "nodeDisconnected": "Node is disconnected",
+    "electronRequiredError": "Electron app is needed for restart"
   }
 }
