Added french translation for users

--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -177,6 +177,7 @@
       "appLanguage": "App Sprache",
       "english": "Englisch",
       "german": "Deutsch",
+      "french": "French",
       "displayAmount": "Anzeige Beträge in Einheit",
       "dFI": "DFI",
       "fi": "fi",
