--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -177,6 +177,7 @@
       "appLanguage": "App language",
       "english": "English",
       "german": "German",
+      "french": "French",
       "displayAmount": "Display amounts in unit",
       "dFI": "DFI",
       "fi": "fi",
